--- a/src/components/Team/Team.styles.css
+++ b/src/components/Team/Team.styles.css
@@ -67,10 +67,12 @@ div#team-section h1{
     border-radius: 50%;
     border: 2px solid black;
     width: 75%;
-    height: 100%; 
+    height: 60%; 
     transition: transform 0.3s ease-in-out;
 }
-
+.team-data{
+    height:30%;
+}
 @media only screen and (max-width: 768px){
     div#team-section h1{
         margin-top: 0rem;
@@ -81,7 +83,6 @@ div#team-section h1{
     #team-section{
         width: 100%;
         height:90vh;
-        background-color: red;
         display: flex;
         flex-direction: column;
         align-items: center;
