improve faculty section
Signed-off-by: Sahil Yeole <sahilyeole93@gmail.com>

--- a/src/components/Faculty/faculty.styles.css
+++ b/src/components/Faculty/faculty.styles.css
@@ -47,8 +47,8 @@ div#faculty-section h1{
 }
 
 .faculty-advisor{
-    width: 15vw;
-    height: 355px;
+    width: 80%;
+    height: 95%;
     border: 2px solid black;
     margin: 0.5rem;
     padding: .5rem;
