--- a/src/components/Faculty/faculty.styles.css
+++ b/src/components/Faculty/faculty.styles.css
@@ -1,137 +1,84 @@
-#faculty-section{
-    width: 100%;
-    height:100vh;
+#faculty-section{ 
+    height:auto;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content:center;
-    gap:10%;
-    cursor: default;
-    background-color: rgb(253, 14, 51);
-    font-family: 'Roboto', sans-serif;
-    font-size: 1.5rem;
-    color: #333;
-}
-
-div#faculty-section h1{
-    font-size: 3rem;
-    color:#333;
-}
-.faculty-advisor:hover{
-    transform: scale(1.1);
-}
-.faculty-carousel{
-    width: 80%;
-    height: 50%;
-    display:grid;
-    grid-template-columns:repeat(4, 1fr);
-    flex-direction:row;
-    justify-content:center;
-    align-content:center;  
-    padding:0;
-    margin-left:10vw;
-    cursor:default;
-}
-
-.facultycarousel-item{
     padding: 20px;
-    margin: 0;
-    width:100%; 
-    display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.5s ease-in-out;
-    cursor: default;
-    word-break:break-word;
-}
-
-.faculty-advisor{
-    width: 80%;
-    height: 95%;
-    border: 2px solid black;
-    margin: 0.5rem;
-    padding: .5rem;
-    display: flex;
-    font-size: 1rem;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap:20px;
-    background-color: #fff;
-    box-shadow: 10px 10px  0 rgba(0,0,250,1);
-    transition: all 0.5s ease-in-out;
-    cursor: pointer;
-    text-align:center;
-}
-.image-container{
-    height:60%;
-    width:80%;
-}
-.faculty-advisor img{
-    box-sizing: border-box;
-    object-cover:scale-down;
-    margin-bottom: 1rem;
-    border-radius: 50%;
-    border: 2px solid black;
-    width: 100%;
-    height: 100%; 
-    transition: transform 0.3s ease-in-out;
-}
-.faculty-data{
-    height:40%;
-}
-
-@media only screen and (max-width: 768px){
-    div#faculty-section h1{
-        margin-top: 0rem;
-        font-size: 3rem;
-        color: #333;
-        padding: 0;
-    }
-    #faculty-section{
-        width: 100%;
-        height:100vh;
-    }
-    .faculty-carousel{
-        width: 80%;
-        grid-template-columns:repeat(2, 1fr);
-    }
-    .facultycarousel-item{
-        padding: 10px;
-        margin: 0;
-        width:100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: center; 
-        transition: all 0.5s ease-in-out;
-        cursor: default;
-    }
-    .faculty-advisor{
-        width: 70%;
-        height: 200px;
-        border: 2px solid black;
-        margin: 1rem;
-        padding: .5rem;
-        display: flex;
-        font-size: .5rem;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        background-color: #fff;
-        box-shadow: 10px 10px  0 rgba(0,0,250,1);
-    }
-    .faculty-advisor img{
-        
-    }
-    .image-container{
-
-    }
-    .faculty-data{
-
-    }
-
+    justify-content: center; 
+    align-items: center; 
+    flex-wrap: wrap; 
+    align-content:center; 
+    gap:10%; 
+    cursor: default; 
+    background-color: #000; 
+    font-family: 'Roboto', sans-serif; 
+    font-size: 1.5rem; 
+    color: #333; 
+} 
+div#faculty-section h1{ 
+    font-size: 3rem; 
+    color:#fff; 
+    text-shadow: 4px 5px 2px rgba(0,0,250,1); 
+} 
+.faculty-advisor:hover{ 
+    transform: scale(1.1); 
+} 
+.faculty-carousel{ 
+    height: 50%; 
+    display:flex; 
+    flex-wrap: wrap; 
+    flex-direction:row; 
+    justify-content:center; 
+    align-content:center; 
+    padding:20px; 
+    margin:0; 
+    cursor:default; 
+} 
+.facultycarousel-item{ 
+    padding: 20px; 
+    margin: 0; 
+    display: flex; 
+    flex-wrap: wrap; 
+    word-break:break-word; 
+    text-align:center; 
+    flex-direction: column; 
+    align-items: center; 
+    justify-content: center; 
+    transition: all 0.5s ease-in-out; 
+    cursor: default; 
+    word-break:break-word; 
+} 
+.faculty-advisor{ 
+    height: 20em; 
+    width: 15em; 
+    border: 2px solid black; 
+    border-radius: 10px; 
+    margin: 0.5rem; 
+    padding: .5rem; 
+    display: flex; 
+    font-size: 1rem; 
+    flex-direction: column; 
+    align-items: center; 
+    justify-content: center; 
+    gap:20px; 
+    background-color: #fff; 
+    box-shadow: 10px 10px  0 rgba(0,0,250,1); 
+    transition: all 0.5s ease-in-out; 
+    cursor: pointer; 
+    text-align:center; 
+} 
+.image-container{ 
+    height:60%; 
+    width:80%; 
+} 
+.faculty-advisor img{ 
+    box-sizing: border-box; 
+    object-cover:scale-down; 
+    margin-bottom: 1rem; 
+    border-radius: 50%; 
+    border: 2px solid black; 
+    width: 100%; height: 100%; 
+    transition: transform 0.3s ease-in-out; 
+} 
+.faculty-data{ 
+    height:40%; 
 }
