--- a/src/components/About/About.right.styles.css
+++ b/src/components/About/About.right.styles.css
@@ -5,7 +5,8 @@
   padding: 0;
   /* color: aliceblue; */
   height: 100vh;
-  background-color: #fff;
+  background-color: #000;
+  color: #fff;
   display: flex;
   position: relative;
   box-sizing: 0;
