--- a/src/components/Events/Events.styles.css
+++ b/src/components/Events/Events.styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
 #event-section {
     position: relative;
-    width: 100%;
+    
     height: 750px;
     padding: 20px;
     box-sizing: border-box;
@@ -10,7 +10,7 @@
     justify-content: space-between;
     align-items: center;
     justify-content: center;
-    background-color:rgba(0, 79, 255);
+    background-color:#000;
     background-repeat: no-repeat;
   }
  .heading{
@@ -19,6 +19,7 @@
     text-align: center;
     margin-top: 20px;
     margin-bottom: 20px;
+    text-shadow: 4px 5px 1px rgba(0, 0, 250, 1);
   } 
   .arrow-button {
     position: absolute;
