--- a/src/components/About/About.left.styles.css
+++ b/src/components/About/About.left.styles.css
@@ -265,7 +265,7 @@
   height: 15.58px;
   left: 26rem;
   top: 33.2rem;
-  background: #000000;
+  background: #282858000;
   border-radius: 80px 80px 0% 0%;
   transform: rotate(90deg);
 }
@@ -276,7 +276,7 @@
   height: 32px;
   left: 23.1rem;
   top: 29.5rem;
-  background: #000;
+  background: #282858;
   border-radius: 24px;
 }
 
@@ -286,7 +286,7 @@
   height: 32px;
   left: 23.1rem;
   top: 29.5rem;
-  background: #000;
+  background: #282858;
   border-radius: 24px;
   transform: rotate(90deg);
 }
@@ -297,7 +297,7 @@
   height: 8px;
   left: 4.1rem;
   top: 19.5rem;
-  background: #000;
+  background: #282858;
   border-radius: 50%;
 }
 
@@ -307,7 +307,7 @@
   height: 8px;
   left: 6.2rem;
   top: 19.5rem;
-  background: #000;
+  background: #282858;
   border-radius: 50%;
 }
 
@@ -317,7 +317,7 @@
   height: 8px;
   left: 8.3rem;
   top: 19.5rem;
-  background: #000;
+  background: #282858;
   border-radius: 50%;
 }
 
