--- a/src/components/Faculty/faculty.styles.css
+++ b/src/components/Faculty/faculty.styles.css
@@ -9,7 +9,7 @@
     align-content:center; 
     gap:10%; 
     cursor: default; 
-    background-color: #000; 
+    background-color: #282858; 
     font-family: 'Roboto', sans-serif; 
     font-size: 1.5rem; 
     color: #333; 
@@ -17,7 +17,7 @@
 div#faculty-section h1{ 
     font-size: 3rem; 
     color:#fff; 
-    text-shadow: 4px 5px 2px rgba(0,0,250,1); 
+    text-shadow: 4px 5px 2px rgb(20 102 139); 
 } 
 .faculty-advisor:hover{ 
     transform: scale(1.1); 
@@ -61,7 +61,7 @@ div#faculty-section h1{
     justify-content: center; 
     gap:20px; 
     background-color: #fff; 
-    box-shadow: 10px 10px  0 rgba(0,0,250,1); 
+    box-shadow: 10px 10px  0 #266776 
     transition: all 0.5s ease-in-out; 
     cursor: pointer; 
     text-align:center; 
