--- a/src/components/Faculty/faculty.styles.css
+++ b/src/components/Faculty/faculty.styles.css
@@ -61,7 +61,7 @@ div#faculty-section h1{
     justify-content: center; 
     gap:20px; 
     background-color: #fff; 
-    box-shadow: 10px 10px  0 #266776 
+    box-shadow: 10px 10px  0 #266776;
     transition: all 0.5s ease-in-out; 
     cursor: pointer; 
     text-align:center; 
