ui changes to make responsive site

--- a/src/components/Faculty/faculty.styles.css
+++ b/src/components/Faculty/faculty.styles.css
@@ -1,5 +1,6 @@
 #faculty-section{ 
     height:auto;
+    min-width: 14em;
     display: flex;
     padding: 20px;
     flex-direction: column;
@@ -12,7 +13,8 @@
     background-color: #282858; 
     font-family: 'Roboto', sans-serif; 
     font-size: 1.5rem; 
-    color: #333; 
+    color: #333;
+    text-align:center; 
 } 
 div#faculty-section h1{ 
     font-size: 3rem; 
@@ -44,8 +46,7 @@ div#faculty-section h1{
     align-items: center; 
     justify-content: center; 
     transition: all 0.5s ease-in-out; 
-    cursor: default; 
-    word-break:break-word; 
+    cursor: default;
 } 
 .faculty-advisor{ 
     height: 20em; 
@@ -76,7 +77,8 @@ div#faculty-section h1{
     margin-bottom: 1rem; 
     border-radius: 50%; 
     border: 2px solid black; 
-    width: 100%; height: 100%; 
+    width: 100%;
+    height: 100%; 
     transition: transform 0.3s ease-in-out; 
 } 
 .faculty-data{ 
