--- a/src/components/Events/Events.styles.css
+++ b/src/components/Events/Events.styles.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
 #event-section {
     position: relative;
-    
-    height: 750px;
+    min-width:14em;
+    height: 755px;
     padding: 20px;
     box-sizing: border-box;
     display: flex;
@@ -49,7 +49,7 @@
   .carousel-container {
     position: relative;
     overflow: hidden;
-    width: 90%;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: row;
@@ -72,18 +72,20 @@
   .carousel {
     position:absolute;
     transition: transform 0.3s ease-in-out;
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 33em;
+    gap: 20px;
     display: flex;
     flex-direction: row;
     align-items: center;
     background:none;
     justify-content: space-between;
     margin-bottom: 20px;
+    transition: transform 0.3s ease-in-out;
   }  
   .carousel-item {
-    width: 400px;
-    height: 600px;
+    width: 20em;
+    height: 32em;
     margin-top: 30px;
     margin-left: 10px;
     display: flex;
@@ -104,9 +106,9 @@
     margin-top: 20px;
     box-sizing: border-box;
     object-fit: scale-down;
-    border-radius: 20px;
-    width: 300px;
-    height: 300px;
+    border-radius: 50%;
+    width: 15em;
+    height: 15em;
     border: 2px solid rgba(255, 255, 255, 1);
     transition: transform 0.3s ease-in-out;
   }
@@ -260,29 +262,19 @@
     color: red;
   }
   
-  @media (max-width: 768px) {
+ @media (max-width: 768px) {
     #event-section {
       padding: 20px;
   }
   .arrow-button {
     font-size: 30px;
-    top: 67%;
-  }
-  .carousel-container {
-    width: 100%;
-    height: 100%;
-    padding-top: 10px;
-  }
-  .carousel {
-    width: 100%;
-    height: 100%;
   }
   .carousel-item {
-    min-width: 100%;
-    height: 100%;
-    margin-top: 10px;
-    margin-left: 0px;
-  }
+    width: 100%;
+    height: 33em;
+    margin:0px;
+    
+  } 
   .event-image {
     margin-top: 10px;
     padding:10px;
@@ -306,213 +298,3 @@
   } 
 }
 
-@media (max-width: 500px) {
-  #event-section {
-    padding: 20px;
-}
-.arrow-button {
-  font-size: 30px;
-  top: 67%;
-}
-.carousel-container {
-  width: 100%;
-  height: 100%;
-  padding-top: 10px;
-}
-.carousel {
-  width: 100%;
-  height: 100%;
-}
-.carousel-item {
-  min-width: 100%;
-  height: 100%;
-  margin-top: 10px;
-  margin-left: 0px;
-}
-.event-image {
-  margin-top: 10px;
-  width:200px;
-  height: 200px;
-  padding:10px;
-}
-.event-details {
-  width: 100%;
-  height: 100%;
-}
-.expanded-details {
-  width: 100%;
-  height: 100%;
-}
-.modal {
-  width: 100%;
-  height: 80%;
-} 
-}
-@media (max-width: 400px) {
-  #event-section {
-    padding: 20px;
-}
-.arrow-button {
-  font-size: 30px;
-  top: 67%;
-}
-.carousel-container {
-  width: 100%;
-  height: 100%;
-  padding-top: 10px;
-}
-.carousel {
-  width: 100%;
-  height: 100%;
-}
-.carousel-item {
-  min-width: 100%;
-  height: 100%;
-  margin-top: 10px;
-  margin-left: 0px;
-}
-.event-image {
-  margin-top: 10px;
-  width:200px;
-  height: 200px;
-  padding:10px;
-}
-.event-details {
-  width: 100%;
-  height: 100%;
-}
-.expanded-details {
-  width: 100%;
-  height: 100%;
-}
-.modal {
-  width: 100%;
-  height: 80%;
-} 
-}
-@media (max-width: 850px) {
-  #event-section {
-    padding: 20px;
-}
-.arrow-button {
-  font-size: 30px;
-  top: 67%;
-}
-.carousel-container {
-  width: 100%;
-  height: 100%;
-  padding-top: 10px;
-}
-.carousel {
-  width: 100%;
-  height: 100%;
-}
-.carousel-item {
-  min-width: 100%;
-  height: 100%;
-  margin-top: 10px;
-  margin-left: 0px;
-}
-.event-image {
-  margin-top: 10px;
-  width:200px;
-  height: 200px;
-  padding:10px;
-}
-.event-details {
-  width: 100%;
-  height: 100%;
-}
-.expanded-details {
-  width: 100%;
-  height: 100%;
-}
-.modal {
-  width: 100%;
-  height: 80%;
-} 
-}
-@media (max-width: 1024px) {
-  #event-section {
-    padding: 20px;
-}
-.arrow-button {
-  font-size: 30px;
-  top: 67%;
-}
-.carousel-container {
-  width: 100%;
-  height: 100%;
-  padding-top: 10px;
-}
-.carousel {
-  width: 100%;
-  height: 100%;
-}
-.carousel-item {
-  min-width: 100%;
-  height: 100%;
-  margin-top: 10px;
-  margin-left: 0px;
-}
-.event-image {
-  margin-top: 10px;
-  width:200px;
-  height: 200px;
-  padding:10px;
-}
-.event-details {
-  width: 100%;
-  height: 100%;
-}
-.expanded-details {
-  width: 100%;
-  height: 100%;
-}
-.modal {
-  width: 100%;
-  height: 80%;
-} 
-}
-@media (max-width: 1200px) {
-  #event-section {
-    padding: 20px;
-}
-.arrow-button {
-  font-size: 30px;
-  top: 67%;
-}
-.carousel-container {
-  width: 100%;
-  height: 100%;
-  padding-top: 10px;
-}
-.carousel {
-  width: 100%;
-  height: 100%;
-}
-.carousel-item {
-  min-width: 100%;
-  height: 100%;
-  margin-top: 10px;
-  margin-left: 0px;
-}
-.event-image {
-  margin-top: 10px;
-  width:200px;
-  height: 200px;
-  padding:10px;
-}
-.event-details {
-  width: 100%;
-  height: 100%;
-}
-.expanded-details {
-  width: 100%;
-  height: 100%;
-}
-.modal {
-  width: 100%;
-  height: 80%;
-} 
-}
