--- a/src/components/Team/Team.styles.css
+++ b/src/components/Team/Team.styles.css
@@ -1,5 +1,4 @@
-#team-section{
-   
+#team-section{  
     padding:2rem;
     display: flex;
     flex-direction: column;
@@ -11,6 +10,8 @@
     font-family: 'Roboto', sans-serif;
     font-size: 1.5rem;
     color: #333;
+    transition: all 0.5s ease-in-out;
+    
 }
 div#team-section h1{
     font-size: 3rem;
@@ -19,36 +20,40 @@ div#team-section h1{
 
 .team-member:hover{
     transform: scale(1.05);
+    box-shadow: 10px 10px  21px rgb(20 102 139);
 }
 .team-carousel{
-    width: 90%;
-    display: flex;
-    justify-content: center;
+    max-width: 100%;
+    min-height: 80%;
+    display: relative;
+    justify-content: space-evenly;
     align-items: center; 
-    padding:0px;
-    margin:0px;
     cursor:default;
+    transition: all 0.5s ease-in-out;
 }
 
 .teamcarousel-item{
-    margin: 10px;
     border-radius: 20px; 
     display: flex;
+    flex-wrap: wrap; 
+    word-break:break-word; 
+    text-align:center;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     transition: all 0.5s ease-in-out;
     cursor: default;
+    padding: 1rem;
 }
 
-.team-member{
-    max-width: 8rem;
-    max-height: 15rem;
+.team-member{ 
+    width: 15em;
+    height: 20em;
     background-color: #fff;
-    border-radius: 20px;
+    border-radius: 10px;
     border: 2px solid black;
     align-items: center;
-    padding: 5rem;
+    padding: .5rem;
     display: flex;
     font-size: 1rem;
     flex-direction: column;
@@ -61,13 +66,20 @@ div#team-section h1{
 }
 .team-member img{
     box-sizing: border-box;
+    object-cover: scale-down;
     margin-bottom: 1rem;
     border-radius: 50%;
     border: 2px solid black;
-    min-width: 15rem;
-    min-height: 15rem; 
+    width: 80%;
+    height: 60%; 
     transition: transform 0.3s ease-in-out;
 }
 .team-data{
     height:30%;
+}
+@media (max-width: 645px ){
+    .team-carousel{
+        max-width: 14em;
+    }
+
 }
