--- a/src/components/Team/Team.styles.css
+++ b/src/components/Team/Team.styles.css
@@ -25,7 +25,7 @@ div#team-section h1{
 .team-carousel{
     max-width: 100%;
     min-height: 80%;
-    display: relative;
+    display: flex;
     justify-content: space-evenly;
     align-items: center; 
     cursor:default;
