--- a/src/components/Events/Events.styles.css
+++ b/src/components/Events/Events.styles.css
@@ -21,31 +21,30 @@
   }
   
   .event-carousel{
-    max-width: 80%;
-    min-height: 80%;
     display: flex;
-    justify-content: space-evenly;
-    align-items: center; 
+    justify-content: space-evenly; 
+    align-items: center;
+    margin: 0 auto;
+    padding: 1em;
+    max-width: 80%; 
+    border-radius: 20px; 
     cursor:default;
     transition: all 0.5s ease-in-out;
   
   }
   .carousel-item {
-    border-radius: 20px; 
+    width: 16em; 
     display: flex;
-    flex-wrap: wrap; 
-    word-break:break-word; 
-    text-align:center;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    transition: all 0.5s ease-in-out;
-    cursor: default;
-    padding: 1rem;
+    justify-content: space-evenly;
+    align-content: center;
+    padding: 1em;
+    border-radius: 20px;     
   }
   .eventcard{
-    width: 18em;
-    height: 30em;
+    width: 16rem;
+    height: 30rem;
     background-color: #fff;
     border-radius: 10px;
     border: 2px solid black;
@@ -63,11 +62,11 @@
 }
 .event-image {
   box-sizing: border-box;
-  object-cover: scale-down;
-  margin-bottom: 1rem;
-  border-radius: 50%;
-  width: 80%;
-  height: 40%; 
+  object-fit: scale-down; 
+  border-radius:50%;
+  width: 15em;
+  height: 15em;
+  padding: 0; 
   transition: transform 0.3s ease-in-out;
 }
 
@@ -82,7 +81,7 @@
   } 
   
   .event-details {
-    padding: 10px;
+    padding: 0.1em;
     box-sizing: border-box;
     width: 100%;
     height: 60%;
@@ -236,9 +235,17 @@
   }
   
  @media (max-width: 780px) {
-  .carousel-item{
+  .event-carousel {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    max-width: 16em;
+    min-width: 16em;
 
+   
   }
+
   .expanded-details {
     width: 100%;
     height: 100%;
