--- a/src/components/Team/Team.styles.css
+++ b/src/components/Team/Team.styles.css
@@ -66,7 +66,7 @@ div#team-section h1{
 }
 .team-member img{
     box-sizing: border-box;
-    object-cover: scale-down;
+    object-fit: scale-down;
     margin-bottom: 1rem;
     border-radius: 50%;
     border: 2px solid black;
