--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
+body {
+    min-height: 100vh;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 300;
     margin: 0;
     padding: 0;
-    background: rgb(2,0,36);
-    background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(15,6,40,1) 46%, rgba(2,20,37,1) 100%);
+    background: rgb(2, 0, 36);
+    background: linear-gradient(180deg, rgba(2, 0, 36, 1) 0%, rgba(15, 6, 40, 1) 46%, rgba(2, 20, 37, 1) 100%);
 }
