--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,9 @@ body {
     padding: 0;
     background: rgb(2, 0, 36);
     background: linear-gradient(180deg, rgba(2, 0, 36, 1) 0%, rgba(15, 6, 40, 1) 46%, rgba(2, 20, 37, 1) 100%);
+
+}
+
+html {
+    scroll-behavior: smooth;
 }
